--- a/tests/SM/universal_result.html
+++ b/tests/SM/universal_result.html
@@ -16,7 +16,7 @@
             <section class="mb-16 relative h-96 rounded-3xl overflow-hidden shadow-2xl">
                 <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-black/40 flex flex-col items-center justify-center text-white">
-                    <h1 class="text-5xl font-bold">HIGH-PERFORMANCE ITEMS</h1>
+                    <h1 class="text-5xl font-bold">내입력</h1>
                     <p class="mt-2 tracking-widest">PAGE 24</p>
                 </div>
             </section>
